--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,7 +1,7 @@
 <app-header #header [fixed]="true"
   [navbarBrandFull]="{src: 'https://elevate-holistics.com/wp-content/themes/elevate-theme/assets/img/logo.svg', width: 140, height: 30, alt: ''}"
   [navbarBrandMinimized]="{src: 'https://elevate-holistics.com/wp-content/themes/elevate-theme/assets/img/logo.svg', width: 140, height: 30, alt: ''}"
-  [sidebarToggler]="'lg'" [sidebarToggler]=false [asideMenuToggler]=false>
+   [sidebarToggler]=false [asideMenuToggler]=false>
 
 
   <ul class="nav navbar-nav d-md-down-none">
@@ -70,11 +70,7 @@
 
     <li class="nav-item dropdown" dropdown placement="bottom right">
 
-      <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"
-        dropdownToggle (click)="false">
-        <i class="fa fa-user fa-2x"></i>
-        <!-- <img src="assets/img/avatars/avt.png" class="img-avatar" alt="admin@bootstrapmaster.com" /> -->
-      </a>
+   
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
         <div class="dropdown-header text-center"><strong>Account</strong></div>
         <!-- <a class="dropdown-item" href="#"><i class="fa fa-bell-o"></i> Updates<span class="badge badge-info">42</span></a>
@@ -89,7 +85,7 @@
         <div class="divider"></div>
         <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a> -->
         <a class="dropdown-item" href="#/profile"><i class="fa fa-user"></i> {{username}}</a>
-        <a class="dropdown-item" href="#/changepassword"><i class="fa fa-key"></i>Change Password</a>
+       
         <a class="dropdown-item" (click)="logout();"><i class="fa fa-lock"></i> Logout</a>
       </div>
     </li>
