--- a/src/app/modules/docsignviewer/viewer/viewer.component.html
+++ b/src/app/modules/docsignviewer/viewer/viewer.component.html
@@ -1,25 +1,14 @@
-
 <ol class="breadcrumb">
   <app-breadcrumb></app-breadcrumb>
   <!-- Breadcrumb Menu-->
 
 </ol>
 
- 
-<div class="fixed-content p-0 " style="overflow-x: hidden;" >
-  <i-docsignviewer 
-  #viewer
-  [toolbarBg]="'#e7edee'"
-  [toolbarColor]="'#333333'"
-  [showSidebar]="true"
-  [showZoomControl]="true"
-  [reduceHeight]="153"
-  [zoom]="0.8"
-  [doclist]="doclist"
-  [activedoc]="activedoc"
-  (onDoclistselect)="onDocListSelect($event)"
-  (onFinished)="onFinished($event)"
-  (onCancel)="onCancel($event)"
-  (onSignatureCreate)="onSignatureCreate($event)"
-  ></i-docsignviewer>
-  </div>
+<div class="fixed-content p-0 " style="overflow-x: hidden;">
+  <i-docsignviewer #viewer [toolbarBg]="'#e7edee'" [toolbarColor]="'#333333'" [showSidebar]="true"
+    [showZoomControl]="true" [reduceHeight]="153" [zoom]="0.8" [doclist]="doclist" [activedoc]="activedoc"
+    (onDoclistselect)="onDocListSelect($event)" (onFinished)="onFinished($event)" (onCancel)="onCancel($event)"
+    (onSignatureCreate)="onSignatureCreate($event)"></i-docsignviewer>
+</div>
+
+<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
