--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,4 +1,11 @@
+<div id="loaderwrap">
+  <span class="loadingicon {{global.loader == true ? '' : 'hide'}}">
+    {{global.loadertext}}
+  </span>
+</div>
+<p-progressBar  *ngIf="global.loader" mode="indeterminate" [style]="{'height': '3px','width':'100%', 'position':'absolute', 'z-index':'1'}"></p-progressBar>
 <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+ 
 
   <div class="app-body">
 
@@ -62,7 +69,7 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
-                  <input type="password" name="password" [(ngModel)]="objlogindtl.password" class="form-control"
+                  <input type="password" name="password" [(ngModel)]="objlogindtl.password" class="form-control" (input)="checkCredintial()"
                     placeholder="One time password" autocomplete="current-password" #password="ngModel"
                     [ngClass]="{ 'is-invalid': (password.dirty ) &&  password.invalid }" required>
                 </div>
@@ -83,7 +90,7 @@
                 </div> -->
                 <div class="row mt-4">
                   <div class="col-12">
-                    <button style="width: 100%;" type="submit" class="btn btn-primary px-4 d-block" [disabled]="!f.form.valid"
+                    <button  style="width: 100%;" type="submit" class="btn btn-primary px-4 d-block" [disabled]="disableSignin"
                       >Sign</button>
                   </div>
                   <!-- <div class="col-6 text-right">
