binding dynamic message

--- a/src/app/modules/docsignviewer/completed/completed.component.html
+++ b/src/app/modules/docsignviewer/completed/completed.component.html
@@ -8,5 +8,5 @@
   <div  style=" height: 300px;text-align: center;" >
       <img src="./assets/img/comp.png" style="height:180px;
       width: auto;" >
-<span class="text-center"> <h3>Document Completed!</h3></span>
+<span class="text-center"> <h3>{{message}}</h3></span>
   </div>
