Revert "Apply to all"
This reverts commit fbbf04c9e956e33deba32c3614711315b55c330b.

--- a/src/app/modules/docsignviewer/viewer/viewer.component.html
+++ b/src/app/modules/docsignviewer/viewer/viewer.component.html
@@ -7,7 +7,7 @@
   <i-docsignviewer #viewer [toolbarBg]="'#e7edee'" [toolbarColor]="'#333333'" [showSidebar]="true"
     [showZoomControl]="true" [reduceHeight]="153" [zoom]="0.8"  [activedoc]="activedoc"
     (onDoclistselect)="onDocListSelect($event)" (onFinished)="validate($event)" (onCancel)="onCancel($event)"
-    (onSignatureCreate)="onSignatureCreate($event)" (onSignatureApplyAll)="onSignatureApplyAll($event)"></i-docsignviewer>
+    (onSignatureCreate)="onSignatureCreate($event)"></i-docsignviewer>
 </div>
 
 <p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
